# l3dg3rr

./: .cog.toml  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.ledgerr-mcp  Justfile  PRD-3.md  PRD-4.md  PRD-5.md  PRD-6-FUTURE.md  PRD-6.md  PRD-9.md  README.md  TODO.md  _b00t_  cog.toml  constraints.html  graph.html  index.html  intro.html  iso.html  layout.html  ledgrrr.just  legal.html  pipeline.html  print.html  program.md  render.html  searcher-c2a407aa.js  searchindex-2687c903.js  searchindex-5b86dceb.js  searchindex-88c50e64.js  searchindex-943908f1.js  searchindex-9adcb753.js  server.json  slint_viz.html  (+8 more)
.b00t/: tasks.json
.cargo/: config.toml
.claude-plugin/: marketplace.json
.codebase-memory/: adr.md
.githooks/: commit-msg
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  v1.1-v1.1-MILESTONE-AUDIT.md
_docs/: iso-pipeline.tomllmd
book/: book.toml
calendar/: tax_calendar_au.toml  tax_calendar_us.toml
crates/arc-kit-au/: Cargo.toml
crates/arc-kit-au/src/: badge.rs  builder.rs  edge.rs  graph.rs  lib.rs  missing.rs  node.rs  store.rs  trace.rs
crates/b00t-iface/: Cargo.toml
crates/b00t-iface/src/: lib.rs  ralph.rs
crates/b00t-iface/src/core/: governance.rs  machine.rs  mod.rs  promise.rs  surface.rs
crates/b00t-iface/src/exec/: harness.rs  mod.rs
crates/b00t-iface/src/gated/: autoresearch.rs  mod.rs  opencode_provider.rs
crates/b00t-iface/src/handshake/: mod.rs
crates/b00t-iface/src/llm/: mod.rs
crates/b00t-iface/src/metric/: mod.rs
crates/b00t-iface/src/sarif/: mod.rs
crates/b00t-iface/src/viz/: mod.rs
crates/datum/: Cargo.toml
crates/datum/src/: ast.rs  lib.rs  logic.rs  protocol.rs  tomllmd.rs
crates/ledger-core/: Cargo.toml  build.rs
crates/ledger-core/src/: calendar.rs  classify.rs  constraints.rs  document.rs  document_shape.rs  filename.rs  fs_meta.rs  graph.rs  ingest.rs  integration_tests.rs  iso.rs  iso_objects.rs  journal.rs  layout.rs  ledger_ops.rs  legal.rs  lib.rs  manifest.rs  observability.rs  ontology.rs  pipeline.rs  proposal.rs  render.rs  rule_registry.rs  slint_viz.rs  tags.rs  validation.rs  verify.rs  visualize.rs  workbook.rs  workflow.rs
crates/ledger-core/tests/: iso_lint.rs  legal_z3_integration.rs  phase1_contracts.rs  phase2_ingest.rs  phase2_ingest_pipeline_remaining.rs  phase2_rustledger_journal.rs  phase3_classification.rs  rhai_rules.rs  rhai_rules_extended.rs  rule_registry.rs  type_mesh.rs
crates/ledgerr-focus/: Cargo.toml
crates/ledgerr-focus/src/: lib.rs  t00n.rs
crates/ledgerr-host/: Cargo.toml  build.rs  tauri.conf.json
crates/ledgerr-host/src/: agent_runtime.rs  chat.rs  evidence.rs  internal_openai.rs  lib.rs  local_llm.rs  local_llm_mistral.rs
crates/ledgerr-host/src/notify/: mod.rs  powershell.rs  types.rs
crates/ledgerr-host/src/settings/: mod.rs  path.rs  schema.rs  store.rs
crates/ledgerr-host/src/tray/: menu.rs  mod.rs  runtime.rs  state.rs
crates/ledgerr-host/tests/: phi4_smoke.rs  settings_atomicity.rs  settings_roundtrip.rs  tray_state.rs  visualization_e2e.rs
crates/ledgerr-host/ui/: index.html  main.js  style.css
crates/ledgerr-llm/: Cargo.toml
crates/ledgerr-llm/src/: error.rs  extract.rs  lib.rs
crates/ledgerr-mcp/: Cargo.toml
crates/ledgerr-mcp/src/: actor.rs  calendar_tool.rs  contract.rs  events.rs  focus_tool.rs  gate.rs  hsm.rs  lib.rs  mcp_adapter.rs  ontology.rs  plugin_info.rs  provider.rs  reconciliation.rs  shape_tool.rs  xero_service.rs
crates/ledgerr-mcp/src/providers/: definitions.rs
crates/ledgerr-mcp/tests/: audit_playbook_contract.rs  contract_codegen.rs  document_inventory.rs  e2e_bdd.rs  e2e_mvp_flow.rs  events_contract.rs  events_mcp_e2e.rs  events_replay_contract.rs  hsm_contract.rs  hsm_mcp_e2e.rs  hsm_resume_contract.rs  interface.rs  mcp_adapter_contract.rs  mcp_provider_smoke.rs  mcp_stdio_e2e.rs  ontology_contract.rs  ontology_mcp_e2e.rs  phase2_mcp_contract_remaining.rs  phase3_mcp_classification.rs  phase4_audit_integrity.rs  phase5_cpa_outputs.rs  phase6_mcp_exposure_gaps.rs  plugin_info_mcp_e2e.rs  reconciliation_contract.rs  reconciliation_mcp_e2e.rs  restart_persistence.rs  tax_assist_contract.rs  tax_assist_mcp_e2e.rs  tax_evidence_chain_contract.rs  tools.rs
crates/ledgerr-mcp/tests/common/: mod.rs
crates/ledgerr-tauri/: Cargo.toml  tauri.conf.json
crates/ledgerr-tauri/capabilities/: main.json
crates/ledgerr-tauri/icons/: icon.icns
crates/ledgerr-tauri/src/: commands.rs  main.rs
crates/ledgerr-tauri/ui/: index.html  main.js  style.css
crates/ledgerr-xero/: Cargo.toml
crates/ledgerr-xero/src/: auth.rs  client.rs  error.rs  lib.rs  types.rs
crates/ledgrrr/: Cargo.toml  tauri.conf.json
crates/ledgrrr/src/: commands.rs  main.rs  state.rs
crates/lfmf-counter/: .lfmf-counters.json  Cargo.toml
crates/lfmf-counter/src/: lib.rs  main.rs
crates/mdbook-rhai-mermaid/: Cargo.toml
crates/mdbook-rhai-mermaid/src/: emitter.rs  lib.rs  main.rs  parser.rs
crates/ontology-extractor/: Cargo.toml
crates/ontology-extractor/src/: lib.rs  main.rs
crates/rotel-visual/: Cargo.toml
crates/rotel-visual/src/: lib.rs  main.rs
crates/rotel-visual/tests/: health_dashboard_tests.rs
crates/turbo-mcp/: Cargo.toml
crates/turbo-mcp/src/: events.rs  hsm.rs  lib.rs  mcp_adapter.rs  ontology.rs  reconciliation.rs  tax_assist.rs
crates/turbo-mcp/tests/: e2e_bdd.rs  e2e_mvp_flow.rs  events_contract.rs  events_mcp_e2e.rs  events_replay_contract.rs  hsm_contract.rs  hsm_mcp_e2e.rs  hsm_resume_contract.rs  interface.rs  mcp_adapter_contract.rs  mcp_stdio_e2e.rs  ontology_contract.rs  ontology_mcp_e2e.rs  phase2_mcp_contract_remaining.rs  phase3_mcp_classification.rs  phase4_audit_integrity.rs  phase5_cpa_outputs.rs  phase6_mcp_exposure_gaps.rs  reconciliation_contract.rs  reconciliation_mcp_e2e.rs  tax_assist_contract.rs  tax_assist_mcp_e2e.rs  tax_evidence_chain_contract.rs
docs/: agent-mcp-runbook.md  claude-cowork-plugin-marketplace.md  mcp-capability-contract.md  release-process.md  rhai-rules.md  (+2 more)
(+249 files in other folders)
