[workspace]
members = [
  "crates/ledger-core",
  "crates/ledgerr-host",
  "crates/ledgerr-mcp",
  "crates/ledgerr-xero",
  "crates/ledgerr-llm",
  "crates/mdbook-rhai-mermaid",
  "crates/arc-kit-au",
  "xtask",
]
resolver = "2"

[workspace.package]
version = "1.8.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
rust_xlsxwriter = "0.94.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.40", features = ["serde"] }
blake3 = "1.8.3"
tracing = "0.1"
tempfile = "3"
z3 = "0.8"
kasuari = "0.4"
statig = "0.4"
anyhow = "1"
ordered-float = { version = "4", features = ["serde"] }
ledger-core = { path = "crates/ledger-core" }

[workspace.lints.rust]
unsafe_code = "deny"
