[package]
name = "ledger-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rust_xlsxwriter = { workspace = true }
calamine = "0.34"
thiserror = "2"
blake3 = "1"
rhai = "1.24.0"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
