[package]
name = "ledger-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rust_xlsxwriter = { workspace = true }
calamine = "0.34"
thiserror = "2"
blake3 = "1"
rhai = "1.24.0"

# filesystem metadata — xattr on Linux; sidecar fallback is pure std
[target.'cfg(target_os = "linux")'.dependencies]
xattr = "1"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
