[package]
name = "ledger-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { workspace = true }
rust_decimal = { workspace = true }
rust_xlsxwriter = { workspace = true }
calamine = "0.34"
thiserror = "2"
blake3 = "1.8.3"
rhai = "1.24.0"
z3 = { workspace = true }
kasuari = { workspace = true }
statig = { workspace = true }
anyhow = "1"
petgraph = "0.6"
fdg-sim = "0.9"
glam = "0.27"
femtovg = "0.9"

# filesystem metadata — xattr on Linux; sidecar fallback is pure std
[target.'cfg(target_os = "linux")'.dependencies]
xattr = "1"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
static_assertions = "1.1"
frunk = "0.4"
trybuild = "1.0"
automod = "1.0"
