[package]
name = "ledgerr-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { workspace = true }
reqwest = { workspace = true }
rig-core = "0.35.0"
ledger-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[target.'cfg(windows)'.dependencies]
slint = "1.16.0"
tray-icon = { version = "0.22.0", default-features = false }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
tempfile = { workspace = true }
