[package]
name = "ledgerr-llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# Base64 for image encoding before sending to vision endpoint
base64 = "0.22"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
