[package]
name = "ledgerr-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3 = "1.8.3"
ledger-core = { version = "=0.1.0", path = "../ledger-core" }
rust_decimal = "1.41.0"
rust_xlsxwriter = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[features]
default = ["core", "events", "reconciliation", "hsm", "ontology", "classification", "audit", "tax"]
core = []
events = ["core"]
reconciliation = ["core"]
hsm = ["core"]
ontology = ["core"]
classification = ["core"]
audit = ["core"]
tax = ["core"]
full = ["core", "events", "reconciliation", "hsm", "ontology", "classification", "audit", "tax"]

[dev-dependencies]
tempfile = "3"
calamine = "0.26"

[lints]
workspace = true
