[package]
name = "ledgerr-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3 = "1.8.3"
ledger-core = { version = "=1.3.7", path = "../ledger-core" }
rust_decimal = "1.41.0"
rust_xlsxwriter = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# plugin_info — always available (cross-platform system metadata)
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

# self-update feature deps — only compiled when the feature is active
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false, optional = true }
semver = { version = "1", optional = true }

# winreg — Windows-only, safe registry wrapper; gated at the cfg level in code
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
default = ["core", "events", "reconciliation", "hsm", "ontology", "classification", "audit", "tax"]
core = []
events = ["core"]
reconciliation = ["core"]
hsm = ["core"]
ontology = ["core"]
classification = ["core"]
audit = ["core"]
tax = ["core"]
full = ["core", "events", "reconciliation", "hsm", "ontology", "classification", "audit", "tax"]
self-update = ["dep:reqwest", "dep:semver"]

[dev-dependencies]
tempfile = "3"
calamine = "0.34"

[lints]
workspace = true
