[package]
name = "ledgerr-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3 = "1.8.3"
chrono = { workspace = true }
ledger-core = { version = "=1.6.0", path = "../ledger-core" }
ledgerr-xero = { version = "=1.6.0", path = "../ledgerr-xero", optional = true }
ledgerr-llm = { version = "=1.6.0", path = "../ledgerr-llm", optional = true }
rust_decimal = { version = "1.41.0", features = ["serde"] }
rust_xlsxwriter = { workspace = true }
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
tracing = { workspace = true }

# plugin_info — always available (cross-platform system metadata)
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

# self-update feature deps — only compiled when the feature is active
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false, optional = true }
semver = { version = "1", optional = true }

# winreg — Windows-only, safe registry wrapper; gated at the cfg level in code
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
default = ["core", "events", "reconciliation", "hsm", "ontology", "classification", "audit", "tax", "xero", "llm"]
core = []
events = ["core"]
reconciliation = ["core"]
hsm = ["core"]
ontology = ["core"]
classification = ["core"]
audit = ["core"]
tax = ["core"]
xero = ["core", "dep:ledgerr-xero"]
llm = ["core", "dep:ledgerr-llm"]
full = ["core", "events", "reconciliation", "hsm", "ontology", "classification", "audit", "tax", "xero", "llm"]
self-update = ["dep:reqwest", "dep:semver"]

[dev-dependencies]
tempfile = "3"
calamine = "0.34"

[lints]
workspace = true
