[package]
name = "ledgrrr"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ledgrrr"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
ledgerr-host = { path = "../ledgerr-host" }

[lints]
workspace = true
