[package]
name = "mdbook-rhai-mermaid"
version = "1.5.0"
edition = "2021"
description = "mdbook preprocessor: rhai DSL code blocks → Mermaid flowchart diagrams"

[[bin]]
name = "mdbook-rhai-mermaid"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
