[package]
name = "ontology-extractor"
version = "1.8.1"
edition = "2021"
description = "Rust AST extraction for ontological knowledge graph construction"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true }
clap = { version = "4.6.1", features = ["derive"] }
syn = { version = "2.0.117", features = ["full", "visit"] }
walkdir = "2.5.0"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "ontology-extractor"
path = "src/main.rs"
