[package]
name = "rotel-visual"
edition = "2024"
license.workspace = true
version.workspace = true

[[bin]]
name = "rotel-visual"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ledger-core = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }

[lints]
workspace = true
