[package]
name = "turbo-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ledger-core = { path = "../ledger-core" }
serde = { version = "1", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
calamine = "0.26"

[lints]
workspace = true
