[package]
name = "turbo-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ledger-core = { path = "../ledger-core" }
rust_decimal = "1.41.0"
rust_xlsxwriter = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
calamine = "0.26"

[lints]
workspace = true
